--- a/Birdnet-CNN/Run_birdnet_gcp.ipynb
+++ b/Birdnet-CNN/Run_birdnet_gcp.ipynb
@@ -10,7 +10,7 @@
     "* Create a user managed vertex notebook on GCP\n",
     "* This script doesnt use GPUs, so only select CPU resources\n",
     "* Model is TFLite -- you can use the default env it gives you, which is Tensorflow\n",
-    "* Drag this script into"
+    "* Drag this script into the home directory that pops up when you open the notebook and run everything from there."
    ]
   },
   {
